# pvz-bot

./: .env.template  .gitignore  README.md  backup.sh  deploy.dev.ps1  deploy.dev.sh  deploy.prod.ps1  deploy.prod.sh  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  minio_init.sh
backend/: .env.template  Dockerfile  dump_appuser.json  dump_pickuppoint.json  dump_telegramuser.json  entrypoint.dev.sh  entrypoint.prod.sh  pickup_points.json  pyproject.toml  requirements.txt  users.json
backend/API/v1/: filters.py  serializer.py  urls.py  views.py
backend/core/: settings.py  storages_backends.py  urls.py
backend/robot/: admin.py  auth_backends.py  filters.py  forms.py  models.py  routers.py  serializers.py  signals.py  tasks.py  urls.py  utils.py  views.py
backend/robot/migrations/: 0001_initial.py  0002_alter_order_customer.py  0002_alter_order_status.py  0002_alter_pickuppoint_marketplace.py  0002_appuser_phone_number_alter_appuser_email.py  0002_marketplace_remove_pickuppoint_marketplace_and_more.py  0003_alter_order_pickup_point.py  0003_alter_order_status.py  0003_alter_pickuppoint_marketplace.py  0003_appuser_password_reset_code.py  0004_alter_order_status.py  0004_order_marketplace.py  0005_alter_order_barcode_image.py  0005_alter_pickuppoint_marketplace.py  0006_alter_order_customer.py  0006_alter_pickuppoint_marketplace.py  0007_order_ammount.py  0008_remove_order_ammount.py  0009_order_amount.py  0010_alter_order_status.py  0011_alter_telegramuser_name.py  0012_alter_order_status.py  0013_alter_order_status.py  0014_alter_order_status.py
backend/robot/routers/: __init__.py  auth.py  marketplaces.py  orders.py  pickup_points.py  urls.py  (+2 more)
bot/: .env.template  Dockerfile  api.py  config.py  loader.py  pyproject.toml  requirements.txt  runbot.py
bot/api/: __init__.py  base.py  endpoints.py
bot/middlewares/: __init__.py  throttling.py  user_exists.py
bot/services/: jwt_client.py  jwt_storage.py
bot/states/: __init__.py  order.py  profile.py
bot/utils/: decorators.py  set_bot_commands.py  utils.py
(+102 files in other folders)
