[tool.poetry]
name = "pvz-bot"
version = "0.1.77"
description = "pvz-bot"
authors = ["CodeFramer <52332286+CodeFramer0@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "3.8.2"
python-dotenv = "^1.0.1"
environs = "^9.5.0"
marshmallow = "^3.20.1"
pydantic = "^2.11.7"
prometheus-client = "^0.22.1"
aiogram = "2.25.1"
aioredis = "2.0.1"
redis = "6.4.0"
psycopg2 = "^2.9.11"
yarl = "1.8.1"
frozenlist = "1.3.1"
requests = "^2.32.5"
pyjwt = "^2.11.0"

[build-system]
requires = ["poetry-core>=1.8.1"]
build-backend = "poetry.core.masonry.api"
